REGRESSION(r267915): Many layout tests are asserting under ~CompletionHandler() https://bugs.webkit.org/show_bug.cgi?id=217345 <rdar://problem/69973775>

Reviewed by Tim Horton.

I did *not* intend to schedule an async task after every single image load in r267915. Apart from triggering
assertions on various tests, this also causes us to send excessive IPC messages to the UI process when loading
images, which can't be good for performance. Fix this by only calling into `computeAndSendEditDragSnapshot()`
when we've finished loading all dropped image elements.

* WebProcess/WebPage/ios/WebPageIOS.mm:
(WebKit::WebPage::didFinishLoadingImageForElement):


Canonical link: https://commits.webkit.org/230124@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@268025 268f45cc-cd09-0410-ab3c-d52691b4dbfc